Minor styling fix to make the spacing between the SnappingGrid and ScaleLine controls look better

--- a/src/control/SnappingGrid/SnappingGrid.css
+++ b/src/control/SnappingGrid/SnappingGrid.css
@@ -1,5 +1,5 @@
 .ol-snapgrid.ol-control {
-  bottom: 2em;
+  bottom: 2.5em;
   left: 0.5em;
 }
 
